/*
 * $Id$
 */

2010-10-01 15:10 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  GNUmakefile
  *  makefile.bcc
  *  makefile.gcc
  *  makefile.vc
  +  include/wxHarbour/wxbase/wx_HtmlWindow.h
  +  include/wxHarbour/wxbase/wx_ScrolledWindow.h
  +  src/wxbase/baseclasses/wx_ScrolledWindow.cpp
  +  src/wxbase/baseclasses/wxhScrolledWindow.prg
  +  src/wxbase/html/wx_HtmlWindow.cpp
  +  src/wxbase/html/wxhHtmlWindow.prg
     + added sources for classes: wxScrolledWindow, wxHtmlWindow

  *  include/wxHarbour/property.ch
     + added command for declaring singleton classes

  *  src/wxbase/advctrls/wxhGrid.prg
     * removed declaration for wxScrolledWindow class

  *  src/wxbase/events/wx_SizeEvent.cpp
     ! Fixed wrong definition of GetSize

2010-09-27 15:17 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  samples/arrbrowser/arrbrowser.prg
     * added debug conditionals helpers

  *  src/hrbcompat/tbrowse/wxhBrowse.prg
     % adding column zero on array/hash datasource's
     ! Removed wrong conditional

2010-09-27 14:45 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  src/raddox/TField.prg
     * ::GetIsPrimaryKeyField is using now ::FTable:KeyField for comparing
     * deprecated Table:GetBaseKeyField in favor of Table:KeyField

  *  src/raddox/TIndex.prg
     * setting the primary index on last current "PRIMARY" index processed
       this keeps the primary index stored in the Table data var

  *  src/raddox/TTable.prg
     * added data var ::FPrimaryIndex to hold the primary index for the table
     * deprecated Table:GetBaseKeyField in favor of Table:KeyField
     * renamed property ::BaseKeyField to ::KeyField
     * removed ::GetPrimaryIndex, now simplified by using ::FPrimaryIndex

2010-09-25 15:32 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  src/raddox/TTable.prg
     * added GetMasterKeyVal for MasterKeyVal property

2010-09-25 14:45 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  include/wxHarbour/raddox.ch